--- a/movie-ng/src/app/input-form/input-form.component.html
+++ b/movie-ng/src/app/input-form/input-form.component.html
@@ -1,1 +1,18 @@
-<p>input-form works!</p>
+<div class="inputForm">
+    <h2>fill the required details below and select your seats</h2>
+    <div class="mr_agilemain">
+        <div class="agileits-left">
+            <label> Name
+                <span>*</span>
+            </label>
+            <input type="text" id="Username" required>
+        </div>
+        <div class="agileits-right">
+            <label> Number of Seats
+                <span>*</span>
+            </label>
+            <input type="number" id="Numseats" required min="1">
+        </div>
+    </div>
+    <button onclick="takeData()">Start Selecting</button>
+</div>
